--------------------------------------------------------------------------------
Changes for 2.3.0

New features:
....I...S. [ZBXNEXT-581] split database upgrade patches over multiple files for easier maintenance (wiper)
A......... [ZBX-7345] removed deprecated API features (Pavels)

Bug fixes:
........S. [ZBX-7204] fixed the timestamp order of events generated during network discovery (igors)

--------------------------------------------------------------------------------
Changes for 2.2.2rc1

New features:
........S. [ZBXNEXT-2069] added HOST.PORT macro support for internal and trigger based notifications (wiper)
A.F....... [ZBX-1357] updated American English, French, Hungarian, Italian, Japanese, Russian, Slovak and Turkish translations; thanks to Zabbix translators (Richlv)

Bug fixes:
........S. [ZBX-6545] fixed possible SQL errors when syncing a node configuration with PostgreSQL backend version 8.2 and later (Sasha)
........S. [ZBX-7452] fixed processing of received events from slave node (Sasha)
.......... [ZBXNEXT-1256] fixed parameter passing for example userparameter to obtain directory size (Richlv)
........S. [ZBX-7521] fixed crash if value cache entered low memory mode when adding a new item to the cache (wiper)
...G...PS. [ZBX-7521] fixed memory allocator realloc() function bug in low memory situations (wiper)
...G...PS. [ZBX-4243] fixed Zabbix syslog application names (RFC 5424 APP-NAME) (Andris)
..F....... [ZBX-3855] fixed bug that prevented the frontend from working with the Turkish locale (Pavels)
A......... [ZBX-7483] fixed user group delete validation (Eduard)
..F....... [ZBX-6296] optimized macro resolving in latest data (Eduard)
..F....... [ZBX-6296] rewrote user macros resolving (Eduard, Sasha)
..F....... [ZBX-6296] rewrote macro resolving in function parameters (Eduard)
A.F....... [ZBX-6348] fixed possibility to create host groups and update all other existing objects with name containing only zeros (Ivo)